# RocketEbpf

./: CLI.md  Cargo.toml  README.md  RocketEbpf.code-workspace  rust-toolchain.toml
docs/: failed_reasons.md
rocket-ebpf/: Cargo.toml  build.rs
rocket-ebpf-common/: Cargo.toml
rocket-ebpf-common/src/: lib.rs
rocket-ebpf-ebpf/: Cargo.toml  build.rs
rocket-ebpf-ebpf/src/: main.rs
rocket-ebpf/src/: cli.rs  cxx_symbol.rs  ebpf.rs  main.rs
rocket-ebpf/src/commands/: exec_trace.rs  func_hz.rs  func_latency.rs  mod.rs  open_trace.rs  sched_latency.rs
rocket-ebpf/src/web/: events.rs  mod.rs
rocket-ebpf/src/web/assets/: index.html
rocket-ebpf/tests/: e2e.rs
