[workspace]
resolver = "2"
members = [
    "rocket-ebpf",
    "rocket-ebpf-common",
    "rocket-ebpf-ebpf",
]
default-members = ["rocket-ebpf", "rocket-ebpf-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"

[workspace.dependencies]
aya = { version = "0.13", default-features = false }
aya-build = { version = "0.1", default-features = false }
aya-ebpf = { version = "0.1", default-features = false }
aya-log = { version = "0.2", default-features = false }
aya-log-ebpf = { version = "0.1", default-features = false }

anyhow = { version = "1", default-features = false }
clap = {
    version = "4.5",
    default-features = false,
    features = ["std", "derive", "help", "usage", "error-context"],
}
cargo_metadata = { version = "0.23", default-features = false }
env_logger = { version = "0.11", default-features = false }
libc = { version = "0.2", default-features = false }
log = { version = "0.4", default-features = false }
tokio = { version = "1", default-features = false }
which = { version = "6", default-features = false }

[profile.release.package.rocket-ebpf-ebpf]
debug = 2
codegen-units = 1
