[package]
name = "rocket-ebpf"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
rocket-ebpf-common = { path = "../rocket-ebpf-common" }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
cpp_demangle = "0.4"
clap = { workspace = true }
object = { version = "0.36", default-features = false, features = [
    "elf",
    "read_core",
    "std",
] }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "time",
] }

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
rocket-ebpf-ebpf = { path = "../rocket-ebpf-ebpf" }

[dev-dependencies]
libc = { workspace = true }

[[bin]]
name = "rocket-ebpf"
path = "src/main.rs"
